--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   align-items: center;     /* centraliza vertical */
   
   width: 100vw;  /* garante largura total */
-  height: 90vh; /* garante altura total */
+  height: 100vh; /* garante altura total */
   margin: 0;
   padding: 0;    /* remove padding */
   font-size: 18px;
@@ -33,6 +33,7 @@ body {
   padding: 2rem;
   max-width: 600px;
   width: 100%;
+  max-height: 1000px;
 }
 
 h3 {
@@ -260,4 +261,5 @@ h3 {
     cursor: pointer;
   }
 }
+
 
